[project]
name = "isogencrypt_sage"
version = "0.1.0"
description = "SageMath package and executable scripts for isogencrypt - isogeny-based cryptographic research library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "verifiers",
]
python_files = [
    "test_*.py",
    "verify_*.py"
]
python_functions = [
    "test_*",
    "verify_*",
]